--- a/src/variables.css
+++ b/src/variables.css
@@ -354,6 +354,7 @@
 
   --color-button-bg: var(--color-gray-500);
   --color-button-hover-bg: var(--color-gray-400); /* 버튼 hover */
+  --color-search-button-bg: var(--color-gray-100); /* 검색 버튼 */
 
   --color-text-primary: var(--color-gray-900); /* 기본 텍스트 색상 */
   --color-text-dynamic: var(--color-black); /* 동적 텍스트 색상 */
@@ -385,6 +386,7 @@
 
   --color-button-bg: var(--color-white);
   --color-button-hover-bg: var(--color-gray-400);
+  --color-search-button-bg: var(--color-gray-950);
 
   --color-text-primary: var(--color-white);
   --color-text-dynamic: var(--color-white);
