--- a/src/pages/Admin/Community/CommunityManagement.module.css
+++ b/src/pages/Admin/Community/CommunityManagement.module.css
@@ -4,12 +4,8 @@
   padding: 1.5rem;
   box-sizing: border-box;
 
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
+  overflow-x: hidden;
+  overflow-y: auto;
 
-.title {
-  font-size: var(--text-xl);
-  font-weight: var(--font-weight-semibold);
+  height: 44rem;
 }
