chore: 커뮤니티글 삭제 후 navigate코드 위치 수정

--- a/src/pages/Board/Board.module.css
+++ b/src/pages/Board/Board.module.css
@@ -70,9 +70,11 @@
 
 .select {
   padding: 0.5rem;
+  padding-left: 1rem;
   border: none;
   background-color: var(--color-bg-primary);
   color: var(--text-primary);
+  font-family: "42dot Sans", serif;
 }
 
 .select:focus {
@@ -91,7 +93,7 @@
 }
 
 .search_btn {
-  width: 5rem;
+  width: 6rem;
   height: 3rem;
   border: none;
   background-color: var(--color-search-button-bg);
