--- a/src/pages/Plan/List/PlanList.module.css
+++ b/src/pages/Plan/List/PlanList.module.css
@@ -2,24 +2,85 @@
   flex: 1;
   width: 100%;
 
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
 }
 
-.title_box {
+
+.header {
   display: flex;
-  gap: 0.5rem;
+  align-items: center;
   justify-content: space-between;
+}
+
+.header_title {
+  font-size: var(--text-xl);
+  font-weight: var(--font-weight-bold);
+
+  display: flex;
+  gap: 1rem;
   align-items: center;
 }
 
-.title {
+/* .title {
   position: relative;
   top: 4px;
   font-size: var(--text-xl);
   font-weight: var(--font-weight-bold);
+} */
+
+
+.flex_column {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
+
+.search_input {
+  width: 20rem;
+  position: relative;
+
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+
+  border-radius: var(--radius-4xl);
+  border: 2px solid var(--color-gray-300);
+  overflow: hidden;
+}
+
+.select {
+  padding: 0.5rem;
+  border: none;
+  background-color: var(--color-bg-primary);
+  color: var(--text-primary);
+}
+
+.select:focus {
+  outline: none;
+}
+
+.select option {
+  color: var(--text-primary);
+  background-color: var(--color-bg-primary);
+}
+
+.error_message {
+  color: var(--color-red-500);
+  font-size: var(--text-sm);
+  padding-left: 0.5rem;
+}
+
+.search_btn {
+  width: 5rem;
+  height: 3rem;
+  border: none;
+  background-color: var(--color-search-button-bg);
+  color: var(--text-primary);
+}
+
 
 .plan_container {
   box-sizing: border-box;
