refactor: 커뮤니티 글 관리 섹션 리팩토링

--- a/src/pages/Admin/Community/ReportedCommunities.module.css
+++ b/src/pages/Admin/Community/ReportedCommunities.module.css
@@ -33,10 +33,12 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  font-weight: var(--font-weight-semibold);
 }
 
-.table th {
-  font-weight: var(--font-weight-semibold);
+.action_title {
+  position: relative;
+  left: 0.5rem;
 }
 
 .pagination {
