--- a/src/pages/Admin/Trip/components/FormCity.module.css
+++ b/src/pages/Admin/Trip/components/FormCity.module.css
@@ -6,7 +6,13 @@
     gap: 1rem;
   }
 
+  .banner_img {
+    max-height: 15rem;
+    height: 100%;
+    margin: 0 auto;
+  }
 
+  
 .columns {
     display: flex;
     align-items: center;
