--- a/src/pages/Admin/AdminLayout.module.css
+++ b/src/pages/Admin/AdminLayout.module.css
@@ -6,19 +6,23 @@
 
 .main_content {
   background-color: var(--color-admin-bg);
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-
-  padding: 1rem;
-  padding-left: 16rem;
+  min-height: 100vh;
 
   box-sizing: border-box;
+  margin-left: 15rem;
+
+  flex: 1;
 }
 
-@media (max-width: 1024px) {
+.motion_container {
+  width: 100%;
+  height: 100%;
+
+  overflow: hidden;
+}
+
+/* @media (max-width: 1024px) {
   .main_content {
     padding: 1rem;
   }
-}
+} */
