--- a/src/pages/Admin/Community/ReportedCommunities.module.css
+++ b/src/pages/Admin/Community/ReportedCommunities.module.css
@@ -1,22 +1,24 @@
 .container {
-  height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
+  gap: 2rem;
 }
 
 .title {
   font-size: var(--text-xl);
   font-weight: var(--font-weight-semibold);
+  display: flex;
+  align-items: center;
+  height: 5rem;
+  box-sizing: border-box;
+  padding-left: 2rem;
+  box-shadow: var(--shadow-md);
 }
 
 .table_wrapper {
   flex: 1;
+  box-sizing: border-box;
+  padding: 1rem 2rem;
 }
 
 .table {
@@ -24,7 +26,8 @@
   border-collapse: collapse;
 }
 
-.table th {
+.table th,
+.table td {
   padding: 0.8rem;
   text-align: left;
   border-bottom: 1px solid var(--color-gray-300);
@@ -33,12 +36,20 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.table th {
   font-weight: var(--font-weight-semibold);
 }
 
 .action_title {
   position: relative;
   left: 0.5rem;
+}
+
+.actions {
+  display: flex;
+  gap: 0.5rem;
 }
 
 .pagination {
