--- a/src/pages/Admin/Dashboard/Dashboard.module.css
+++ b/src/pages/Admin/Dashboard/Dashboard.module.css
@@ -1,20 +1,24 @@
 .container {
-  border-radius: var(--radius-md);
-  box-shadow: var(--shadow-md);
-  padding: 1.5rem;
-  box-sizing: border-box;
-
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .title {
   font-size: var(--text-xl);
   font-weight: var(--font-weight-semibold);
+  display: flex;
+  align-items: center;
+  height: 5rem;
+  box-sizing: border-box;
+  padding-left: 2rem;
+  box-shadow: var(--shadow-md);
 }
 
 .grid_container {
+  box-sizing: border-box;
+  padding: 1rem 2rem;
+
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 1rem;
