--- a/src/pages/Admin/Trip/Country.module.css
+++ b/src/pages/Admin/Trip/Country.module.css
@@ -1,17 +1,17 @@
 .container {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .header {
   display: flex;
   justify-content: space-between;
-}
-
-.header_btns {
-  display: flex;
-  gap: 0.5rem;
+  align-items: center;
+  height: 5rem;
+  box-sizing: border-box;
+  padding: 0 2rem;
+  box-shadow: var(--shadow-md);
 }
 
 .title {
@@ -21,6 +21,8 @@
 
 .table_wrapper {
   flex: 1;
+  box-sizing: border-box;
+  padding: 1rem 2rem;
 }
 
 .table {
@@ -33,6 +35,11 @@
   padding: 0.8rem;
   text-align: left;
   border-bottom: 1px solid var(--color-gray-300);
+
+  max-width: 10rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .table th {
@@ -47,4 +54,9 @@
 .actions {
   display: flex;
   gap: 0.5rem;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
 }
