--- a/src/pages/Admin/User/AllUser.module.css
+++ b/src/pages/Admin/User/AllUser.module.css
@@ -1,23 +1,24 @@
 .container {
-  height: 100%;
-
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
+  gap: 2rem;
 }
 
 .title {
   font-size: var(--text-xl);
   font-weight: var(--font-weight-semibold);
+  display: flex;
+  align-items: center;
+  height: 5rem;
+  box-sizing: border-box;
+  padding-left: 2rem;
+  box-shadow: var(--shadow-md);
 }
 
 .table_wrapper {
   flex: 1;
+  box-sizing: border-box;
+  padding: 1rem 2rem;
 }
 
 .table {
