--- a/src/pages/Destination/Detail/DestinationInfo/DestinationInfo.module.css
+++ b/src/pages/Destination/Detail/DestinationInfo/DestinationInfo.module.css
@@ -1,21 +1,27 @@
-.info_box {
-  flex: 1;
-  box-sizing: border-box;
+.container {
+  display: flex;
+  gap: 1rem;
+  height: 10rem;
 }
 
-.weather_box {
-  height: 10rem;
+.flex_column {
+  flex: 1;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 .plane_box,
 .hotel_box {
+  flex: 1;
+  height: 100%;
   display: flex;
-  height: 4rem;
-  margin-top: 1rem;
   border-radius: var(--radius-xl);
   align-items: center;
   box-sizing: border-box;
-  padding-left: 1rem;
+  padding: 1rem;
   background-position: center;
   background-size: cover;
   background-color: rgba(255, 255, 255, 0.5);
