--- a/src/pages/Destination/Detail/DestinationInfo/Weather.module.css
+++ b/src/pages/Destination/Detail/DestinationInfo/Weather.module.css
@@ -1,13 +1,6 @@
-.weather-container {
-  box-sizing: border-box;
-  justify-content: center;
-  text-align: center;
-}
-
-.forecast_container {
+.container {
+  flex: 1;
   width: 100%;
-  height: 100%;
-
   display: flex;
   gap: 1rem;
 }
@@ -17,7 +10,6 @@
 
   box-sizing: border-box;
   padding: 1rem;
-  height: 10rem;
   background-color: var(--color-gray-200);
   border-radius: var(--radius-lg);
   text-align: center;
@@ -29,7 +21,7 @@
 }
 
 .forecast_img {
-  width: 50%;
+  width: 3rem;
   aspect-ratio: 1;
 }
 
