--- a/src/pages/Destination/Detail/DestinationMap/DestinationMap.module.css
+++ b/src/pages/Destination/Detail/DestinationMap/DestinationMap.module.css
@@ -1,9 +1,24 @@
-.map_container {
-  width: 40rem;
-  min-width: 10rem;
+.container {
+  flex: 1;
   height: 100%;
 
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.title {
+  font-size: var(--text-xl);
+  font-weight: var(--font-weight-bold);
+}
+
+.map_container {
+  width: 100%;
+  height: 100%;
+  border-radius: var(--radius-md);
+  overflow: hidden;
+
   box-sizing: border-box;
-  box-shadow: var(--shadow-xl);
+  box-shadow: var(--shadow-lg);
   overflow: hidden;
 }
