--- a/src/components/Slider/Sliders.module.css
+++ b/src/components/Slider/Sliders.module.css
@@ -10,7 +10,11 @@
   transform: translateY(-50%);
   cursor: pointer;
   z-index: 10;
-  height: 100%;
+  height: 4rem;
+  width: 4rem;
+  border-radius: var(--radius-full);
+  background-color: white;
+  box-shadow: var(--shadow-md);
 }
 
 .prev_btn {
@@ -21,10 +25,10 @@
   right: 0px;
 }
 
-.prev_btn:hover,
+/* .prev_btn:hover,
 .next_btn:hover {
   background: rgba(0, 0, 0, 0.1);
-}
+} */
 
 .sm_container {
     border-top: 1px solid var(--color-gray-200);
