--- a/src/components/Slider/Sliders.module.css
+++ b/src/components/Slider/Sliders.module.css
@@ -10,9 +10,10 @@
   transform: translateY(-50%);
   cursor: pointer;
   z-index: 10;
-  height: 4rem;
-  width: 4rem;
+  height: 3rem;
+  width: 3rem;
   border-radius: var(--radius-full);
+  justify-content: center;
   background-color: white;
   box-shadow: var(--shadow-md);
 }
