--- a/src/pages/Destination/Detail/Destination.module.css
+++ b/src/pages/Destination/Detail/Destination.module.css
@@ -5,14 +5,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
+  gap: 3rem;
 }
 
 .centered {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 3rem;
   max-width: var(--breakpoint-lg);
 
   box-sizing: border-box;
@@ -22,82 +22,18 @@
 .map_container {
   display: flex;
   height: 40rem;
-}
-
-.res {
-  width: 40rem;
-}
-
-.title_box {
-  display: flex;
   gap: 0.5rem;
-  margin-bottom: 0.5rem;
 }
 
 .title {
-  font-size: var(--text-2xl);
+  font-size: var(--text-xl);
   font-weight: var(--font-weight-bold);
 }
 
-.item_title {
-  font-size: var(--text-2xl);
-  font-weight: var(--font-weight-bold);
-  color: var(--color-black);
-}
-
-.restraunt_box {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-auto-flow: column;
-  gap: 1rem;
-  border-top: 1px solid var(--color-text-dynamic);
-  border-bottom: 1px solid var(--color-text-dynamic);
-  padding: 1rem 0;
-  overflow-x: auto;
-  overflow-y: auto;
-  box-sizing: border-box;
-}
-
-.img_container {
-  width: 100%;
-  height: 100%;
-
-  background-size: cover;
-  background-position: center;
-  opacity: 0.8;
-  border: 3px solid var(--color-gray-200);
-  border-radius: var(--radius-xl);
-  z-index: -1;
-}
-
-.plan_box {
-  flex: 1;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.plan_title {
-  padding: 1rem;
-  border-radius: var(--radius-lg);
-  width: 10rem;
-  background-color: rgba(255, 255, 255, 0.6);
+.plan_container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.plan_name {
-  font-weight: var(--font-weight-extrabold);
-  font-size: var(--text-2xl);
-
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  gap: 1rem;
 }
 
 @media screen and (max-width: 1320px) {
