--- a/src/pages/Destination/Detail/DestinationInfo/Weather.module.css
+++ b/src/pages/Destination/Detail/DestinationInfo/Weather.module.css
@@ -2,7 +2,7 @@
   flex: 1;
   width: 100%;
   display: flex;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 .forecast_card {
@@ -10,14 +10,16 @@
 
   box-sizing: border-box;
   padding: 1rem;
-  background-color: var(--color-gray-200);
-  border-radius: var(--radius-lg);
+  background-color: var(--color-amber-400);
+  border-radius: var(--radius-md);
+  box-shadow: var(--shadow-xl);
   text-align: center;
 
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 .forecast_img {
@@ -26,5 +28,5 @@
 }
 
 .forecast_text {
-  color: var(--color-black);
+  color: var(--color-white);
 }
