--- a/src/pages/Destination/Detail/DestinationMap/CustomInfoWindow.module.css
+++ b/src/pages/Destination/Detail/DestinationMap/CustomInfoWindow.module.css
@@ -32,3 +32,9 @@
   gap: 0.5rem;
   align-items: center;
 }
+
+.link {
+  color: var(--color-blue-600);
+  text-decoration: none;
+  font-weight: var(--font-weight-semibold);
+}
