--- a/src/pages/Home/MainContent.module.css
+++ b/src/pages/Home/MainContent.module.css
@@ -1,58 +1,55 @@
+.interest_container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 
-.title_box {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .title {
-    color: var(--color-text-dynamic);
-    font-size: var(--text-4xl);
-    font-weight: var(--font-weight-bold);
-    margin-bottom: 2rem;
-  }
-  
-  .img_container {
-    width: 100%;
-    height: 100%;
-  
-    cursor: pointer;
-    background-size: cover;
-    background-position: center;
-    opacity: 0.6;
-    border: 3px solid var(--color-gray-200);
-    border-radius: var(--radius-xl);
-    z-index: -1;
-  }
-  
-  .dest_container {
-    flex: 1;
-    position: absolute;
-    cursor: pointer;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  
-  .dest_title {
-    padding: 1rem;
-    border-radius: var(--radius-lg);
-    width: 12rem;
-    background-color: rgba(255, 255, 255, 0.6);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.5rem;
-  }
-  
-  .dest_name {
-    font-weight: var(--font-weight-extrabold);
-    font-size: var(--text-2xl);
-  
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-  
+.title {
+  color: var(--color-text-dynamic);
+  font-size: var(--text-3xl);
+  font-weight: var(--font-weight-bold);
+}
+
+.img_container {
+  width: 100%;
+  height: 100%;
+
+  cursor: pointer;
+  background-size: cover;
+  background-position: center;
+  opacity: 0.6;
+  border: 3px solid var(--color-gray-200);
+  border-radius: var(--radius-xl);
+  z-index: -1;
+}
+
+.dest_container {
+  flex: 1;
+  position: absolute;
+  cursor: pointer;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.dest_title {
+  padding: 1rem;
+  border-radius: var(--radius-lg);
+  width: 12rem;
+  background-color: rgba(255, 255, 255, 0.6);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.dest_name {
+  font-weight: var(--font-weight-extrabold);
+  font-size: var(--text-2xl);
+
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
