feat: plandetail페이지 배너 추가

--- a/src/pages/Plan/Detail/PlanDetail.module.css
+++ b/src/pages/Plan/Detail/PlanDetail.module.css
@@ -3,5 +3,24 @@
 
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 3rem;
+  margin-bottom: 3rem;
+}
+
+.centered {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  max-width: var(--breakpoint-lg);
+
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 1320px) {
+  .centered {
+    padding: 0 1rem;
+  }
 }
