feat: 관리자 페이지에 월별 회원가입 차트 추가

--- a/src/pages/Admin/Dashboard/Dashboard.module.css
+++ b/src/pages/Admin/Dashboard/Dashboard.module.css
@@ -42,10 +42,12 @@
   display: flex;
   gap: 1rem;
   padding: 0 2rem;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 1280px) {
   .charts_container {
     flex-direction: column;
+    padding: 2rem;
   }
 }
