--- a/src/pages/Home/BestCity.module.css
+++ b/src/pages/Home/BestCity.module.css
@@ -5,6 +5,28 @@
   box-sizing: border-box;
 }
 
+.slider_title_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  gap: 1rem;
+}
+
+.slider_title {
+  font-size: var(--text-3xl);
+  font-weight: var(--font-weight-extrabold);
+  color: var(--color-text-dynamic);
+}
+
+.slider_subtitle {
+  font-size: var(--text-lg);
+  color: var(--color-gray-500);
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+
 .img_container {
   width: 100%;
   height: 100%;
