feat: 관리자 페이지에서 회원 권한 변경 기능 추가

--- a/src/pages/Admin/User/AllUserTable.module.css
+++ b/src/pages/Admin/User/AllUserTable.module.css
@@ -25,6 +25,12 @@
   font-weight: var(--font-weight-semibold);
 }
 
+.role {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
 .action_title {
   position: relative;
   left: 0.5rem;
