--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -20,6 +20,7 @@
 }
 
 .header {
+  box-sizing: border-box;
   max-width: var(--breakpoint-lg);
   width: 100%;
   z-index: 99;
@@ -69,7 +70,8 @@
 }
 
 @media screen and (max-width: 1320px) {
-  .centered {
+  .centered,
+  .header {
     padding: 0 1rem;
   }
 }
