chore: Loading을 페이지전체가 아닌 특정섹션별로 사용할 수 있게 수정

--- a/src/components/Loading/Loading.module.css
+++ b/src/components/Loading/Loading.module.css
@@ -9,6 +9,15 @@
   background-color: rgba(0, 0, 0, 0.1);
 }
 
+.section_container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 99;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
 .spinner {
   font-size: 10px;
   width: 1em;
