--- a/src/pages/Auth/Find/Find.module.css
+++ b/src/pages/Auth/Find/Find.module.css
@@ -1,31 +1,30 @@
 .container {
-    box-sizing: border-box;
-    width: 100%;
-    padding: 4rem 2rem;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    /* align-items: center; */
-  }
-
-.title {
-    font-size: var(--text-2xl);
-    margin-bottom: 3rem;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 4rem 2rem;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
 }
 
-.input_box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.5rem;
-    width: 100%;
-    margin-bottom: 1rem;
+.title {
+  font-size: var(--text-2xl);
+}
+
+.form_box {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .btn_box {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 3rem;
-  }
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.prev_btn {
+  cursor: pointer;
+}
