feat: 모달내 버튼 CSS수정

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -6,6 +6,11 @@
   transition: all 0.2s;
 }
 
+.modal_btn {
+  --color-button-bg: var(--color-gray-500);
+  --color-button-text: var(--color-white);
+}
+
 /* Size variants */
 .btn_sm {
   padding: 0.25rem 0.5rem;
