--- a/src/pages/Plan/CreatePlan/CreatePlan.module.css
+++ b/src/pages/Plan/CreatePlan/CreatePlan.module.css
@@ -1,7 +1,7 @@
 .container {
   flex: 1;
   box-sizing: border-box;
-  min-height: 70vh;
+  max-height: 70vh;
   width: 100%;
   display: flex;
   align-items: stretch;
@@ -36,7 +36,7 @@
 .plan_container {
   box-sizing: border-box;
   border: 1px solid var(--color-gray-200);
-  box-shadow: var(--shadow-lg);
+  box-shadow: var(--shadow-md);
   border-radius: var(--radius-xl);
   width: 50%;
   background-color: var(--color-bg-primary);
