--- a/src/pages/Plan/Detail/ModalContents/ManageFriends.module.css
+++ b/src/pages/Plan/Detail/ModalContents/ManageFriends.module.css
@@ -13,31 +13,13 @@
   font-weight: var(--font-weight-bold);
 }
 
+.sub_title {
+  font-weight: var(--font-weight-bold);
+}
+
 .form_container {
   display: flex;
   gap: 0.5rem;
-}
-
-.error {
-  color: var(--color-red-600);
-  font-size: var(--text-xs);
-}
-
-.private_box {
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-}
-
-.radio_box {
-  display: flex;
-  align-items: center;
-  gap: 0.3rem;
-}
-
-.radio_label {
-  position: relative;
-  top: 2px;
 }
 
 .user_name_box {
@@ -48,16 +30,17 @@
 
 .user_name {
   display: flex;
-  /* justify-content: center; */
-  /* margin: 0.5rem; */
-  padding: 0.25rem;
   width: 100%;
   justify-content: space-between;
-  /* border-radius: var(--radius-lg); */
-  /* background-color: var(--color-indigo-200); */
 }
 
 .name {
   font-size: var(--text-base);
   font-weight: var(--font-weight-semibold);
+}
+
+.friend_container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
