--- a/src/components/Cards/CityCard/CityCard.module.css
+++ b/src/components/Cards/CityCard/CityCard.module.css
@@ -4,9 +4,10 @@
   gap: 1rem;
   border-radius: var(--radius-md);
   overflow: hidden;
+  width: 100%;
+  height: 100%;
 
-  box-shadow: var(--shadow-md);
-  aspect-ratio: 1;
+  box-shadow: var(--shadow-sm);
   cursor: pointer;
 }
 
@@ -49,6 +50,10 @@
   flex-direction: column;
   align-items: center;
   gap: 0.5rem;
+}
+
+.dark {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 .city {
