--- a/src/components/Cards/PlanCard/PlanCard.module.css
+++ b/src/components/Cards/PlanCard/PlanCard.module.css
@@ -5,7 +5,7 @@
   border-radius: var(--radius-md);
   overflow: hidden;
 
-  box-shadow: var(--shadow-md);
+  box-shadow: var(--shadow-sm);
   height: 20rem;
   cursor: pointer;
 }
@@ -126,6 +126,10 @@
   flex-direction: column;
   align-items: center;
   gap: 0.5rem;
+}
+
+.dark {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 .title {
