--- a/src/components/Cards/CityCard/CityCard.module.css
+++ b/src/components/Cards/CityCard/CityCard.module.css
@@ -7,6 +7,8 @@
   width: 100%;
   height: 100%;
 
+  aspect-ratio: 1 / 1;
+
   box-shadow: var(--shadow-sm);
   cursor: pointer;
 }
@@ -70,7 +72,7 @@
 .country {
   font-weight: var(--font-weight-semibold);
   font-size: var(--text-sm);
-  color: var(--color-gray-600);
+  color: var(--color-gray-500);
 
   display: -webkit-box;
   -webkit-line-clamp: 1;
