--- a/src/pages/Home/Banner/Banner.module.css
+++ b/src/pages/Home/Banner/Banner.module.css
@@ -1,6 +1,8 @@
 .embla {
   width: 100%;
-  height: 40rem;
+  aspect-ratio: 26/9;
+  min-height: 30rem;
+
   position: relative;
   overflow: hidden;
   z-index: 1;
@@ -23,7 +25,9 @@
 
 .embla_image {
   width: 100%;
-  height: 40rem;
-  background-size: cover;
-  background-position: center;
+  aspect-ratio: 26/9;
+  min-height: 30rem;
+
+  object-fit: cover;
+  object-position: center;
 }
