chore: 다크모드시 모달내부 CityCard의 CSS 수정

--- a/src/components/Cards/CityCard/CityCard.module.css
+++ b/src/components/Cards/CityCard/CityCard.module.css
@@ -58,6 +58,10 @@
   background-color: rgba(0, 0, 0, 0.8);
 }
 
+.dark_text {
+  color: var(--color-white);
+}
+
 .city {
   font-weight: var(--font-weight-extrabold);
   font-size: var(--text-2xl);
