--- a/src/pages/Auth/Social/Social.module.css
+++ b/src/pages/Auth/Social/Social.module.css
@@ -5,12 +5,12 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
+    align-items: center;
   }
 
 .title {
     font-size: var(--text-2xl);
-    margin-bottom: 3rem;
+    margin: 4rem 0;
 }
 
 .input_box {
