--- a/src/pages/Board/Board.module.css
+++ b/src/pages/Board/Board.module.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .header {
@@ -109,9 +109,11 @@
 }
 
 .content_list {
+  box-sizing: border-box;
+  padding-top: 1rem;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1.5rem;
 }
 
 .pagination {
