--- a/src/pages/Board/BoardItem.module.css
+++ b/src/pages/Board/BoardItem.module.css
@@ -1,7 +1,18 @@
 .container {
   display: flex;
+  gap: 1rem;
+
+  border-bottom: 1px solid var(--color-gray-200);
+  padding-bottom: 1.5rem;
+  cursor: pointer;
+}
+
+.left_container {
+  display: flex;
   flex-direction: column;
   gap: 1rem;
+
+  flex: 1;
 }
 
 .tags_container {
@@ -15,13 +26,7 @@
   border-radius: var(--radius-2xl);
   background-color: #f0f0f0;
   color: var(--color-green-400);
-  font-size: var(--text-lg);
   font-weight: var(--font-weight-bold);
-}
-
-.header_container {
-  display: flex;
-  justify-content: space-between;
 }
 
 .header_info {
@@ -65,11 +70,14 @@
   align-items: center;
 
   color: var(--color-gray-400);
+  font-size: var(--text-sm);
 }
 
 .content_container {
   display: flex;
   gap: 2rem;
+
+  flex: 1;
 }
 
 .content_text {
