--- a/src/pages/Board/Detail/BoardDetail.module.css
+++ b/src/pages/Board/Detail/BoardDetail.module.css
@@ -8,6 +8,25 @@
   overflow: hidden;
 }
 
+.tags_container {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+
+  box-sizing: border-box;
+  padding-bottom: 0.5rem;
+}
+
+.tag {
+  display: flex;
+  align-items: center;
+
+  box-sizing: border-box;
+  padding: 0.5rem 0.8rem;
+  background-color: var(--color-gray-100);
+  border-radius: var(--radius-2xl);
+}
+
 .title {
   font-size: var(--text-xl);
   font-weight: var(--font-weight-bold);
@@ -95,6 +114,6 @@
 }
 
 .dropdown_menu,
-.thumbs{
+.thumbs {
   cursor: pointer;
 }
