--- a/src/pages/Board/FormHashtag.module.css
+++ b/src/pages/Board/FormHashtag.module.css
@@ -12,8 +12,8 @@
 
 .dropdown_container {
   border: 1px solid #ddd;
-  background: white;
-  border-radius: 4px;
+  background: var(--color-white);
+  border-radius: var(--radius-sm);
 }
 
 .dropdown_title {
@@ -55,7 +55,10 @@
 
   box-sizing: border-box;
   padding: 0.5rem 0.8rem;
-  background-color: var(--color-gray-100);
+
+  color: var(--color-tag-text);
+  font-weight: var(--font-weight-bold);
+  background-color: var(--color-tag-bg);
   border-radius: var(--radius-2xl);
 }
 
