--- a/src/pages/Board/FormHashtag.module.css
+++ b/src/pages/Board/FormHashtag.module.css
@@ -12,7 +12,8 @@
 
 .dropdown_container {
   border: 1px solid #ddd;
-  background: var(--color-white);
+  background-color: var(--color-white);
+  color: var(--color-black);
   border-radius: var(--radius-sm);
 }
 
@@ -52,9 +53,10 @@
   height: 100%;
   display: flex;
   align-items: center;
+  gap: 0.3rem;
 
   box-sizing: border-box;
-  padding: 0.5rem 0.8rem;
+  padding: 0.5rem 0.5rem 0.5rem 0.8rem;
 
   color: var(--color-tag-text);
   font-weight: var(--font-weight-bold);
