--- a/src/pages/Plan/Detail/PlanBudget/PlanBudget.module.css
+++ b/src/pages/Plan/Detail/PlanBudget/PlanBudget.module.css
@@ -6,54 +6,64 @@
 
 .title {
   font-weight: var(--font-weight-bold);
-  font-size: var(--text-2xl);
-}
-
-.budget_column_container {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-
-  background-color: var(--color-board-bg);
-  box-sizing: border-box;
-  padding: 1rem;
-  border-radius: var(--radius-lg);
+  font-size: var(--text-xl);
 }
 
 .budget_row_container {
-  min-height: 20rem;
-
   display: flex;
-  gap: 1rem;
+  gap: 2rem;
   flex: 1;
 }
 
 .budget_container,
 .budget_item {
   flex: 1;
-  align-self: stretch;
-  border-radius: var(--radius-lg);
-  box-shadow: var(--shadow-md);
   box-sizing: border-box;
-  padding: 2rem 1.5rem;
-  background-color: var(--color-bg-primary);
+  padding: 2.5rem 0 1rem 0;
+
+  box-shadow: var(--shadow-md);
+  background-image: linear-gradient(
+      90deg,
+      var(--color-bg-primary) 12px,
+      0,
+      var(--color-green-800) 15px,
+      0,
+      var(--color-green-600) 20px,
+      0,
+      var(--color-bg-primary) 100%
+    ),
+    radial-gradient(
+      circle closest-side,
+      rgba(255, 255, 255, 0) 88%,
+      var(--color-bg-primary) 100%
+    ),
+    radial-gradient(
+      circle at 22px 8px,
+      var(--color-green-600) 40%,
+      var(--color-green-800) 40%
+    );
+  background-size: 32px 8px, 32px 16px, 32px 16px;
+  background-repeat: space no-repeat;
+  background-position: center top, center 6px, center 6px;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+
+  min-height: 10rem;
+  max-height: 30rem;
+  box-sizing: border-box;
+  padding-left: 1rem;
+
+  overflow-y: auto;
 }
 
 .budget_container {
-  font-weight: var(--font-weight-semibold);
-  font-size: var(--text-xl);
   display: flex;
   flex-direction: column;
   gap: 1rem;
-}
-
-.budget_item {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-
-  max-height: 30rem;
-  overflow-y: auto;
 }
 
 .flex_column {
@@ -63,25 +73,6 @@
 }
 
 .budget_title {
-  font-weight: var(--font-weight-semibold);
-  font-size: var(--text-lg);
-}
-
-.remain_container {
-  min-height: 5rem;
-  border-radius: var(--radius-lg);
-  box-shadow: var(--shadow-md);
-  box-sizing: border-box;
-  padding: 2rem 1.5rem;
-  background-color: var(--color-bg-primary);
-
-  display: flex;
-  align-items: center;
-  justify-content: end;
-  gap: 0.5rem;
-}
-
-.remain_title {
   font-weight: var(--font-weight-semibold);
   font-size: var(--text-lg);
 }
