feat: destination페이지 내 플랜리스트 페이지 추가 구현

--- a/src/pages/Destination/Detail/Destination.module.css
+++ b/src/pages/Destination/Detail/Destination.module.css
@@ -25,6 +25,12 @@
   gap: 0.5rem;
 }
 
+.title_box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .title {
   font-size: var(--text-xl);
   font-weight: var(--font-weight-bold);
