--- a/src/pages/Plan/Detail/PlanBudget/PlanBudget.module.css
+++ b/src/pages/Plan/Detail/PlanBudget/PlanBudget.module.css
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+
+  --paper-color: #f1ede9;
+  /* --paper-color: var(--color-black); */
+  --paper-line: #94acd4;
 }
 
 .title {
@@ -15,61 +19,38 @@
   flex: 1;
 }
 
+.top {
+  height: 3rem;
+  background-color: var(--color-black);
+  box-shadow: var(--shadow-md);
+}
+
 .budget_container,
 .budget_item {
   flex: 1;
-  box-sizing: border-box;
-  padding: 2.5rem 0 1rem 0;
-
+  background-color: var(--paper-color);
   box-shadow: var(--shadow-md);
-  background-image: linear-gradient(
-      90deg,
-      var(--color-bg-primary) 12px,
-      0,
-      var(--color-green-800) 15px,
-      0,
-      var(--color-green-600) 20px,
-      0,
-      var(--color-bg-primary) 100%
-    ),
-    radial-gradient(
-      circle closest-side,
-      rgba(255, 255, 255, 0) 88%,
-      var(--color-bg-primary) 100%
-    ),
-    radial-gradient(
-      circle at 22px 8px,
-      var(--color-green-600) 40%,
-      var(--color-green-800) 40%
-    );
-  background-size: 32px 8px, 32px 16px, 32px 16px;
-  background-repeat: space no-repeat;
-  background-position: center top, center 6px, center 6px;
 }
 
 .wrapper {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
 
   min-height: 10rem;
   max-height: 30rem;
   box-sizing: border-box;
-  padding-left: 1rem;
+  padding: 0.5rem 0 1rem 0;
 
   overflow-y: auto;
-}
-
-.budget_container {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
 }
 
 .flex_column {
   display: flex;
   flex-direction: column;
   gap: 0.7rem;
+  padding: 1rem 1rem;
+
+  border-bottom: 2px solid var(--paper-line);
 }
 
 .budget_title {
