--- a/src/pages/Plan/Detail/PlanBudget/PlanBudget.module.css
+++ b/src/pages/Plan/Detail/PlanBudget/PlanBudget.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   gap: 1rem;
 
-  --paper-color: #f1ede9;
+  --paper-color: #f7f1ec;
   /* --paper-color: var(--color-black); */
   --paper-line: #94acd4;
 }
@@ -21,7 +21,7 @@
 
 .top {
   height: 3rem;
-  background-color: var(--color-black);
+  background-color: var(--color-zinc-600);
   box-shadow: var(--shadow-md);
 }
 
@@ -30,6 +30,8 @@
   flex: 1;
   background-color: var(--paper-color);
   box-shadow: var(--shadow-md);
+  border-radius: var(--radius-md);
+  overflow: hidden;
 }
 
 .wrapper {
