chore: 내 정보 수정 css 수정

--- a/src/pages/MyPage/MyInfo/PasswordForm.module.css
+++ b/src/pages/MyPage/MyInfo/PasswordForm.module.css
@@ -27,3 +27,9 @@
   color: var(--color-red-500);
   font-size: var(--text-xs);
 }
+
+.title {
+  font-size: var(--text-lg);
+  font-weight: var(--font-weight-semibold);
+  margin-bottom: 1rem;
+}
