--- a/src/pages/Board/FormHashtag.module.css
+++ b/src/pages/Board/FormHashtag.module.css
@@ -11,7 +11,7 @@
 }
 
 .dropdown_container {
-  border: 1px solid #ddd;
+  border: 1px solid var(--color-gray-100);
   background-color: var(--color-white);
   color: var(--color-black);
   border-radius: var(--radius-sm);
