--- a/src/pages/Plan/Detail/PlanBudget/PlanBudget.module.css
+++ b/src/pages/Plan/Detail/PlanBudget/PlanBudget.module.css
@@ -6,7 +6,7 @@
 
 .title {
   font-weight: var(--font-weight-bold);
-  font-size: var(--text-xl);
+  font-size: var(--text-2xl);
 
   display: flex;
   align-items: center;
@@ -16,11 +16,11 @@
 .invoice_container {
   display: flex;
   gap: 0.5rem;
-  flex-wrap: wrap;
 }
 
 .invoice {
   flex: 1;
+
   min-height: 20rem;
   max-height: 40rem;
   overflow-y: auto;
@@ -59,6 +59,10 @@
   border-bottom: 1px solid var(--color-gray-200);
 }
 
+.remain {
+  font-weight: var(--font-weight-bold);
+}
+
 .item_title {
   font-weight: var(--font-weight-bold);
 }
@@ -87,6 +91,18 @@
   border-bottom: 1px solid var(--color-gray-200);
 }
 
+.service_title {
+  border-bottom: 1px solid var(--color-gray-200);
+  font-weight: var(--font-weight-bold);
+}
+
 .table_item {
   padding: 1rem 0.5rem;
+}
+
+@media screen and (max-width: 768px) {
+  .invoice_container {
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
