--- a/src/pages/Plan/Detail/PlanDes/PlanDes.module.css
+++ b/src/pages/Plan/Detail/PlanDes/PlanDes.module.css
@@ -17,7 +17,7 @@
 
 .title {
   font-weight: var(--font-weight-bold);
-  font-size: var(--text-xl);
+  font-size: var(--text-2xl);
 
   display: flex;
   align-items: center;
