--- a/src/pages/Plan/Detail/PlanDes/DayDetail.module.css
+++ b/src/pages/Plan/Detail/PlanDes/DayDetail.module.css
@@ -36,12 +36,51 @@
 
 .icon {
   color: var(--color-icon);
+  position: relative;
+  top: 3px;
+
+  z-index: 1;
 }
 
 .vertical_divider {
   flex: 1;
   width: 4px;
   background-color: var(--color-border);
+
+  position: relative;
+}
+
+.vertical_bus_icons {
+  width: 100%;
+  height: 100%;
+
+  box-sizing: border-box;
+  padding-top: calc(7.5rem - 40px);
+  position: absolute;
+  z-index: 2;
+  right: calc(1rem - 2px);
+
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+}
+
+.bus_icon_wrapper {
+  width: 2rem;
+  height: 2rem;
+  background-color: var(--color-bg-primary);
+  border-radius: 50%;
+  box-shadow: var(--shadow-sm);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  cursor: pointer;
+}
+
+.bus_icon {
+  font-size: 1.5rem;
 }
 
 .empty {
