feat: 특정날짜의 계획이 없을떄, 해당날짜의 일정을 생성하기 위해 ScheduleDetail에 props추가

--- a/src/pages/Plan/Detail/PlanDes/DayDetail.module.css
+++ b/src/pages/Plan/Detail/PlanDes/DayDetail.module.css
@@ -16,6 +16,11 @@
   display: flex;
 }
 
+.dark {
+  --color-border: var(--color-zinc-400);
+  --color-icon: var(--color-zinc-200);
+}
+
 .container_right {
   flex: 1;
   box-sizing: border-box;
@@ -77,6 +82,11 @@
   align-items: center;
 
   cursor: pointer;
+  transition: scale 0.2s;
+}
+
+.bus_icon_wrapper:hover {
+  scale: 1.1;
 }
 
 .bus_icon {
