--- a/src/pages/Plan/Detail/Banner/Banner.module.css
+++ b/src/pages/Plan/Detail/Banner/Banner.module.css
@@ -62,8 +62,30 @@
   }
 }
 
+.banner_menu_wrapper {
+  flex: 1;
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+
+  box-sizing: border-box;
+  padding-bottom: 1rem;
+}
+
 .banner_menu {
-  position: absolute;
-  bottom: 1rem;
-  right: 5rem;
+  display: flex;
+  justify-content: end;
+  max-width: var(--breakpoint-lg);
+  width: 100%;
+
+  z-index: 1;
+}
+
+@media screen and (max-width: 1320px) {
+  .banner_menu_wrapper {
+    padding: 1rem;
+  }
 }
