chore: NoticeItem 스크롤 잠깐 생기는 현상 해결 및 색상 변경

--- a/src/pages/Notice/NoticeItem.module.css
+++ b/src/pages/Notice/NoticeItem.module.css
@@ -29,7 +29,11 @@
 }
 
 .icon {
-  color: var(--color-notice-border);
+  color: var(--color-notice-icon);
+}
+
+.arrow_icon {
+  color: var(--color-notice-icon);
 }
 
 .container:not(:last-child) {
