--- a/src/components/Cards/CityCard/CityCard.module.css
+++ b/src/components/Cards/CityCard/CityCard.module.css
@@ -13,15 +13,12 @@
   cursor: pointer;
 }
 
-.img_container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+.bg_img {
+  width: 100%;
+  height: 100%;
 
-  background-size: cover;
-  background-position: center;
+  object-fit: cover;
+  object-position: center;
   opacity: 0.8;
 }
 
