--- a/src/pages/Destination/Detail/DestinationInfo/Weather.module.css
+++ b/src/pages/Destination/Detail/DestinationInfo/Weather.module.css
@@ -12,7 +12,7 @@
   padding: 1rem;
   background-color: var(--color-amber-400);
   border-radius: var(--radius-md);
-  box-shadow: var(--shadow-xl);
+  box-shadow: var(--shadow-lg);
   text-align: center;
 
   display: flex;
