--- a/src/pages/Destination/Detail/DestinationMap/CustomInfoWindow.module.css
+++ b/src/pages/Destination/Detail/DestinationMap/CustomInfoWindow.module.css
@@ -2,6 +2,7 @@
   font-family: "42dot Sans", serif;
   font-size: var(--text-lg);
   font-weight: var(--font-weight-semibold);
+  color: var(--color-black);
 }
 
 .container {
@@ -10,6 +11,7 @@
   flex-direction: column;
   gap: 1rem;
   max-width: 30rem;
+  color: var(--color-black);
 }
 
 .image {
