--- a/src/pages/Plan/Detail/PlanMap/CustomInfoWindow.module.css
+++ b/src/pages/Plan/Detail/PlanMap/CustomInfoWindow.module.css
@@ -2,6 +2,7 @@
   font-family: "42dot Sans", serif;
   font-size: var(--text-lg);
   font-weight: var(--font-weight-semibold);
+  color: var(--color-black);
 }
 
 .container {
@@ -9,4 +10,5 @@
   flex-direction: column;
   gap: 0.5rem;
   font-family: "42dot Sans", serif;
+  color: var(--color-black);
 }
