chore: Home의 YoutubeSection의 여행지 바로가기 버튼 글자꺠짐 방지

--- a/src/pages/Home/YoutubeSection.module.css
+++ b/src/pages/Home/YoutubeSection.module.css
@@ -168,6 +168,8 @@
   font-weight: var(--font-weight-semibold);
   border-radius: var(--radius-4xl);
   color: var(--color-white);
+
+  white-space: nowrap;
 }
 
 .plan_nav_btn_dark {
