chore: Sliders컴포넌트 버튼 CSS 중앙정렬 및 아이콘크기rem으로 변경

--- a/src/components/Slider/Sliders.module.css
+++ b/src/components/Slider/Sliders.module.css
@@ -19,10 +19,22 @@
 
 .prev_btn {
   left: 0px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .next_btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   right: 0px;
+}
+
+.arrow_icon {
+  font-size: var(--text-3xl);
 }
 
 .sm_container {
