feat: 여행계획 디테일 페이지 반응형 개선

--- a/src/pages/Plan/Detail/PlanDes/PlanDes.module.css
+++ b/src/pages/Plan/Detail/PlanDes/PlanDes.module.css
@@ -55,3 +55,11 @@
 :root[theme="dark"] .focus {
   background-color: var(--color-gray-500);
 }
+
+@media screen and (max-width: 400px) {
+  .header {
+    flex-direction: column;
+    justify-content: inherit;
+    gap: 1rem;
+  }
+}
