--- a/src/pages/Plan/CreatePlan/ModalContents/PreferenceCities.module.css
+++ b/src/pages/Plan/CreatePlan/ModalContents/PreferenceCities.module.css
@@ -16,7 +16,7 @@
 
 .grid_container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
+  grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
 }
 
@@ -28,4 +28,16 @@
   object-position: center;
   opacity: 0.8;
   cursor: pointer;
+}
+
+@media screen and (max-width: 1294px) {
+  .grid_container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .grid_container {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
