feat: Footer Contact에 포지션별 레포지토리 Git링크 추가

--- a/src/layouts/BaseLayout/Footer/ContactIconBox.module.css
+++ b/src/layouts/BaseLayout/Footer/ContactIconBox.module.css
@@ -18,6 +18,9 @@
 .iconLink {
   transition: transform 0.2s ease-in-out;
   color: var(--color-text-dynamic);
+
+  display: flex;
+  align-items: center;
 }
 
 .iconLink:hover {
