--- a/src/layouts/BaseLayout/Footer/Contact.module.css
+++ b/src/layouts/BaseLayout/Footer/Contact.module.css
@@ -24,8 +24,35 @@
 }
 
 .subHeading {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+
   font-size: var(--text-xl);
   font-weight: var(--font-weight-semibold);
+}
+
+.subHeading_text {
+  flex: 1;
+}
+
+.iconLink {
+  flex: 1;
+
+  display: flex;
+  align-items: center;
+}
+
+.icon {
+  width: 1.5rem;
+  height: 1.5rem;
+
+  transition: transform 0.2s ease-in-out;
+  color: var(--color-text-dynamic);
+}
+
+.icon:hover {
+  transform: scale(1.3);
 }
 
 .iconBoxContainer {
