chore: 신고창 CSS 수정

--- a/src/pages/Board/Detail/components/ReportModal.module.css
+++ b/src/pages/Board/Detail/components/ReportModal.module.css
@@ -1,26 +1,33 @@
-.container{
-    flex: 1;
-    width: 100%;
-    min-width: 30rem;
-    display: flex;
-    flex-direction: column;
-    gap: 3rem;
-  
-    box-sizing: border-box;
-    padding: 2rem;
+.container {
+  flex: 1;
+  width: 100%;
+  min-width: 30rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  box-sizing: border-box;
+  padding: 2rem;
 }
 
 .title {
-    font-size: var(--text-2xl);
-    font-weight: var(--font-weight-bold);
-    color: var(--color-text-primary);
-  }
+  font-size: var(--text-xl);
+  font-weight: var(--font-weight-bold);
+  color: var(--color-black);
+}
 
-  .content {
-    padding: 1rem;
-    border: 1px solid var(--color-gray-300);
-    border-radius: var(--radius-md);
-    font-size: var(--text-md);
-    resize: none;
-    outline: none;
-  }
+.content {
+  padding: 1rem;
+  border: 1px solid var(--color-gray-300);
+  border-radius: var(--radius-md);
+  font-size: var(--text-md);
+  resize: none;
+  outline: none;
+
+  font-family: "42dot Sans", serif;
+}
+
+.report_btn {
+  display: flex;
+  justify-content: end;
+}
