chore: 여행 계획 좋아요 버튼 CSS 수정

--- a/src/pages/Plan/Detail/PlanInfo/PlanInfo.module.css
+++ b/src/pages/Plan/Detail/PlanInfo/PlanInfo.module.css
@@ -19,7 +19,20 @@
 
 .header_menu {
   display: flex;
-  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+
+  box-sizing: border-box;
+  padding: 0.5rem;
+  border-radius: var(--radius-full);
+  box-shadow: var(--shadow-md);
+}
+
+.heart_icon {
+  position: relative;
+  top: 4px;
+  color: var(--color-red-500);
+  cursor: pointer;
 }
 
 .info {
