feat: 게시글과 여행계획의 검색 개선

--- a/src/pages/Plan/List/PlanList.module.css
+++ b/src/pages/Plan/List/PlanList.module.css
@@ -89,6 +89,10 @@
   align-self: center;
 }
 
+.empty {
+  height: 30rem;
+}
+
 @media screen and (max-width: 768px) {
   .plan_container {
     grid-template-columns: 1fr;
