fix: 스크롤로 인한 레이아웃 흔들림 방지

--- a/src/global.css
+++ b/src/global.css
@@ -6,6 +6,8 @@ html {
 
   color: var(--color-text-dynamic);
   background-color: var(--color-bg-primary);
+
+  overflow-y: scroll;
 }
 
 /* breakpoint-xl */
