feat: 여행계획 디테일 페이지 CSS 수정

--- a/src/pages/Plan/Detail/PlanInfo/PlanInfo.module.css
+++ b/src/pages/Plan/Detail/PlanInfo/PlanInfo.module.css
@@ -17,6 +17,12 @@
   font-size: var(--text-2xl);
 }
 
+.header_buttons {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
 .header_menu {
   display: flex;
   align-items: center;
